modify Linkedin link

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <ul class="list-unstiled">
         <li><a href="https://www.facebook.com/eva19950630"><i class="fa fa-facebook"></i></a></li> 
         <li><a href="https://plus.google.com/u/0/110346189647619206203"><i class="fa fa-google-plus"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/shih-syuan-64ab26130?trk="><i class="fa fa-linkedin"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/syuan-shih-64ab26130/"><i class="fa fa-linkedin"></i></a></li>
 		<li><a href="https://www.instagram.com/eva19950630/"><i class="fa fa-instagram"></i></a></li>
         <!--<li><a href="#"><i class="fa fa-twitter"></i></a></li>-->
 		<!--<li><a href="#"><i class="fa fa-dribbble"></i></a></li>-->
