--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="col-xs-12 col-sm-2 sidebar">
                     <div class="col-sm-2 sidebarWrapper">
                         <!-- Avatar -->
-						<img class="user-pic" src="images/syuan.jpg" alt="">
+						<img class="user-pic" src="images/syuan2.jpg" alt="">
 						<div class="signature">
 							<!--<img class="img-responsive" alt="signature" src="images/signature.png">-->
                             <p style="font-size:0.7cm;line-height: 45px;">Syuan Shih</p>
@@ -161,7 +161,7 @@
                                     <div class="education-title"><span class="glyphicon glyphicon-education" aria-hidden="true"></span><b> Education</b></div>
                                     <div class="wow fadeInRight education">
                                         <div class="is-padded"> 
-                                            <blockquote><h3>2017.6</h3><span>Graduating student from University of Taipei</span></blockquote>
+                                            <blockquote><h3>2017.6</h3><span>University of Taipei, Bachelor in Computer Science</span></blockquote>
                                             <blockquote><h3>2010.6</h3><span>Graduated from Dong-Shan Senior High School</span></blockquote>
                                         </div>
                                     </div>
@@ -169,7 +169,7 @@
                                 <div class="col-xs-6">
                                     <!--<img class="user-pic" src="images/syuan.jpg" alt="">-->
                                     <ul class="wow tada photo">
-                                        <li><span></span><img src="images/syuan.jpg" alt="image"/></li>
+                                        <li><span></span><img src="images/syuan2.jpg" alt="image"/></li>
                                         <figcaption>Syuan Shih</figcaption>
                                     </ul>
                                 </div>
@@ -180,49 +180,49 @@
 
                                 <!-- Skill 1 -->
                                 <div class="wow fadeIn skill-outer">
-                                    <h4>C &amp; C++<span>75%</span></h4>
+                                    <h4>C &amp; C#<span>80%</span></h4>
                                     <div class="SkillBar">
-                                        <div id="Skill-75"></div>
+                                        <div id="Skill-80"></div>
                                     </div>
                                 </div>
 
                                 <!-- Skill 2 -->
                                 <div class="wow fadeIn skill-outer">
-                                    <h4>Java<span>70%</span></h4>
+                                    <h4>Java<span>75%</span></h4>
                                     <div class="SkillBar">
-                                        <div id="Skill-70"></div>
+                                        <div id="Skill-75"></div>
                                     </div>
                                 </div>
 
                                 <!-- Skill 3 -->
                                 <div class="wow fadeIn skill-outer">
-                                    <h4>HTML5 &amp; CSS3<span>70%</span></h4>
+                                    <h4>HTML5 &amp; CSS3<span>80%</span></h4>
                                     <div class="SkillBar">
-                                        <div id="Skill-70"></div>
+                                        <div id="Skill-80"></div>
                                     </div>
                                 </div>
 
                                 <!-- Skill 4 -->
                                 <div class="wow fadeIn skill-outer">
-                                    <h4>Javascript<span>65%</span></h4>
+                                    <h4>Javascript<span>70%</span></h4>
                                     <div class="SkillBar">
-                                        <div id="Skill-65"></div>
+                                        <div id="Skill-70"></div>
                                     </div>
                                 </div>
 
                                 <!-- Skill 5 -->
                                 <div class="wow fadeIn skill-outer">
-                                    <h4>PHP<span>65%</span></h4>
+                                    <h4>PHP<span>70%</span></h4>
                                     <div class="SkillBar">
-                                        <div id="Skill-65"></div>
+                                        <div id="Skill-70"></div>
                                     </div>
                                 </div>
 
                                 <!-- Skill 6 -->
                                 <div class="wow fadeIn skill-outer">
-                                    <h4>Python<span>60%</span></h4>
+                                    <h4>Python<span>65%</span></h4>
                                     <div class="SkillBar">
-                                        <div id="Skill-60"></div>
+                                        <div id="Skill-65"></div>
                                     </div>
                                 </div>
                                 
@@ -252,55 +252,28 @@
                                 <!-- The Timeline -->
                                 <ul class="timeline">
 
-                                    <!-- Item 1 -->
-                                    <li>
-                                        <div class="direction-r">     
-                                            <div class="flag-wrapper">
-                                                <span class="wow bounceIn dot"></span>
-                                                <span class="flag">Enter University of Taipei</span>
-                                                <span class="wow fadeInRight time-wrapper"><span class="time">2013</span></span>
-                                            </div>
-                                            <div class="wow fadeInRight desc">In September of 2013, I start my college life in Taipei.</div>
-                                        </div>
-                                        <!-- <div class="exp-1">
-                                            <div class="direction-l">
-                                                <div class="exp-img"><img src="images/experience/school.jpg"></div>
-                                            </div>
-                                        </div>-->
-                                    </li>
-
-                                    <!-- Item 2 -->
+                                    <!-- Item 6 -->
                                     <li>
                                         <div class="direction-l">
                                             <div class="flag-wrapper">
                                                 <span class="wow bounceIn dot"></span>
-                                                <span class="flag">Linked List Learning Website</span>
-                                                <span class="wow fadeInLeft time-wrapper"><span class="time">2014</span></span>
+                                                <span class="flag">A Sentence A Day</span>
+                                                <span class="wow fadeInLeft time-wrapper"><span class="time">2016 - 2017</span></span>
                                             </div>
-                                            <div class="wow fadeInLeft desc">My first Website. Help someone who is not familiar with the conception of Linked List.</div>
+                                            <div class="wow fadeInLeft desc">My first social network website using Django(Python framework).</div>
                                         </div>
-                                        <!-- <div class="exp-2">
-                                            <div class="direction-r">
-                                                <div class="exp-img"><img src="images/experience/school.jpg"></div>
-                                            </div>
-                                        </div>-->
                                     </li>
 
-                                    <!-- Item 3 -->
+                                    <!-- Item 5 -->
                                     <li>
                                         <div class="direction-r">
                                             <div class="flag-wrapper">
                                                 <span class="wow bounceIn dot"></span>
-                                                <span class="flag">2015 TSOC Competition</span>
-                                                <span class="wow fadeInRight time-wrapper"><span class="time">2015</span></span>
+                                                <span class="flag">2016 MOST Research</span>
+                                                <span class="wow fadeInRight time-wrapper"><span class="time">2016 - 2017</span></span>
                                             </div>
-                                            <div class="wow fadeInRight desc">I participate extramural competition first time.</div>
+                                            <div class="wow fadeInRight desc">Research for College Student Research Scholarship. It's also my graduation project.</div>
                                         </div>
-                                        <!-- <div class="exp-3">
-                                            <div class="direction-l">
-                                                <div class="exp-img"><img src="images/experience/school.jpg"></div>
-                                            </div>
-                                        </div>-->
                                     </li>
 
                                     <!-- Item 4 -->
@@ -313,29 +286,43 @@
                                             </div>
                                             <div class="wow fadeInLeft desc">My first APP. Keep a pet and dress it.</div>
                                         </div>
-                                        <!-- <div class="exp-4">
-                                            <div class="direction-r">
-                                                <div class="exp-img"><img src="images/experience/school.jpg"></div>
-                                            </div>
-                                        </div>-->
                                     </li>
 
-                                    <!-- Item 5 -->
+                                    <!-- Item 3 -->
                                     <li>
                                         <div class="direction-r">
                                             <div class="flag-wrapper">
                                                 <span class="wow bounceIn dot"></span>
-                                                <span class="flag">2016 MOST Research</span>
-                                                <span class="wow fadeInRight time-wrapper"><span class="time">2016 - present</span></span>
+                                                <span class="flag">2015 TSOC Competition</span>
+                                                <span class="wow fadeInRight time-wrapper"><span class="time">2015</span></span>
                                             </div>
-                                            <div class="wow fadeInRight desc">My current research. It's also my graduation project.</div>
+                                            <div class="wow fadeInRight desc">I participate extramural competition first time.</div>
                                         </div>
-                                        <!-- <div class="exp-5">
-                                            <div class="direction-l">
-                                                <div class="exp-img"><img src="images/experience/school.jpg"></div>
-                                            </div>
-                                        </div>-->
                                     </li>
+
+                                    <!-- Item 2 -->
+                                    <li>
+                                        <div class="direction-l">
+                                            <div class="flag-wrapper">
+                                                <span class="wow bounceIn dot"></span>
+                                                <span class="flag">Linked List Learning Website</span>
+                                                <span class="wow fadeInLeft time-wrapper"><span class="time">2014</span></span>
+                                            </div>
+                                            <div class="wow fadeInLeft desc">My first Website. Help someone who is not familiar with the conception of Linked List.</div>
+                                        </div>
+                                    </li>
+
+                                    <!-- Item 1 -->
+                                    <li>
+                                        <div class="direction-r">     
+                                            <div class="flag-wrapper">
+                                                <span class="wow bounceIn dot"></span>
+                                                <span class="flag">Enter University of Taipei</span>
+                                                <span class="wow fadeInRight time-wrapper"><span class="time">2013</span></span>
+                                            </div>
+                                            <div class="wow fadeInRight desc">In September of 2013, I start my college life in Taipei.</div>
+                                        </div>
+                                    </li>                       
                                   
                                 </ul>
                                 <!--end The Timeline -->
@@ -534,7 +521,31 @@
                                                     <img src="images/portfolio/portfolio-07.png" alt=""><!-- Image 7 source -->
                                                     <div>
                                                         <h3>MOST / Graduation Project</h3>
-                                                        <p>In 2016, I submitted a project for MOST. The project is approved by MOST. We plan to create a game for students in the elementary school. The developing software we use is <i>Unity</i>. We learn this software first time and find the tutorial on the website. After practicing the tutorial, we discuss that if we can append this function in our project. This project is also our graduation project. We hope we can create a fun game for children and help them improving their academic course's grade. </p>
+                                                        <p>In 2016, I submitted a project for MOST. The project is approved by MOST. We plan to create a game for students in the elementary school. The developing software we use is <i>Unity</i>. We learn this software first time and find the tutorial on the website. After practicing the tutorial, we discuss that if we can append this function in our project. This project is also our graduation project. We hope we can create a fun game for children and help them improving their academic course's grade.</p>
+                                                    </div>
+                                                </div>
+                                                <!-- end popup content -->
+                                            </div>
+                                        </div>
+
+                                        <!-- Image 8: Academic_ASAD -->
+                                        <div class="col-xs-12 col-sm-4 mix category-3">
+                                            <div class="imageWrapper">
+                                                <a class="lightbox" href="#popup-8">
+                                                    <img src="images/portfolio/portfolio-08.png" alt=""><!-- Image 8 source -->
+                                                    <div class="imageHover">
+                                                        <div>
+                                                            <h3>A Sentence A Day</h3>
+                                                            <span>Academic Work</span>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                                <!-- popup content -->
+                                                <div id="popup-8" class="mfp-hide popup-box">
+                                                    <img src="images/portfolio/portfolio-08.png" alt=""><!-- Image 8 source -->
+                                                    <div>
+                                                        <h3>A Sentence A Day&emsp;<a href="http://sentence-scl.herokuapp.com/" style="background-color: #e6e6e6;" target="_blank"><span class="glyphicon glyphicon-link" style="padding: 4.5px; font-size: 0.9em;" aria-hidden="true"></span></a></h3>
+                                                        <p>It is a social network website that we use <i>Django</i> to develop it. User posts a sentence in their native language, and other users translate the sentence on their post. We want to make a big translate platform by using social network. I'm responsible for UI/UX design and back-end <i>Python</i> coding. In the developing process of this project, we are much familiar with using <i>Facebook</i> API and git version management. In particular, we have equipped with the ability to work as a team.</p>
                                                     </div>
                                                 </div>
                                                 <!-- end popup content -->
